--- a/bims/static/css/navbar.css
+++ b/bims/static/css/navbar.css
@@ -110,9 +110,50 @@
     font-size: 25pt !important;
     padding: 3px 10px;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
+    width: 55px;
+    text-align: center;
+
 }
 
 #navbarResponsive .dropdown-menu {
   right: 0!important;
   left: auto !important;
+}
+
+.navbar-light .navbar-toggler {
+    border: 2px solid black;
+    background: rgba(255, 255, 255, 0.6);
+}
+
+.col-lg-6 {
+    max-width: 50% !important;
+}
+
+.navbar-toggler {
+    padding: .15rem .35rem;
+}
+
+@media screen and (max-width: 650px) {
+    .user-icon {
+        font-size: 20pt !important;
+        width: 47px;
+    }
+    .dropdown-menu a {
+        font-size: 15pt;
+    }
+    .dropdown-menu li {
+        margin-top: 10px;
+    }
+    .bims-title-acc {
+        line-height: 1.1rem;
+        font-size: 0.7rem;
+    }
+    .close-dropdown {
+        font-size: 20pt;
+        line-height: 30px;
+    }
+
+    .bims-nav-footer a {
+        font-size: 10pt !important;
+    }
 }
