--- a/bims/static/css/non_validated_list.css
+++ b/bims/static/css/non_validated_list.css
@@ -44,3 +44,10 @@ tr:nth-child(odd) {background: #f5f5f5}
 .page-current a {
     color: cadetblue !important;
 }
+
+#popup {
+    background-color: white;
+    border: 1px solid grey;
+    padding: 5px;
+    font-size: 8pt;
+}
