--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -70,7 +70,7 @@ html, body, .map, .map-wrapper, #map-container {
     height: 100%;
     width: 250px;
     max-width: 400px;
-    background: rgba(204, 204, 204, 0.7);
+    background: rgba(204, 204, 204, 1);
     color: #4e4e4e;
     z-index: 2000;
     -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2); /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
@@ -94,7 +94,7 @@ html, body, .map, .map-wrapper, #map-container {
     padding-bottom: 5px;
     padding-left: 15px;
     height: 100px;
-    background: rgba(255, 255, 255, 0.7);
+    background: rgba(255, 255, 255, 1);
 }
 
 .right-panel-title {
@@ -218,7 +218,7 @@ html, body, .map, .map-wrapper, #map-container {
 
 .map-control-panel-box {
     width: 265px;
-    background-color: rgba(204, 204, 204, 0.4);
+    background-color: white;
     position: absolute;
     top: 0;
     color: black;
@@ -240,7 +240,7 @@ html, body, .map, .map-wrapper, #map-container {
 
 #layers-selector {
     list-style-type: none;
-    padding-left: 0;
+    padding: 5px;
     margin-bottom: 0;
 }
 
@@ -285,10 +285,7 @@ html, body, .map, .map-wrapper, #map-container {
     text-align: left;
     background: none;
     color: black;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding: 5px 10px;
     border: none;
     cursor: pointer;
 }
@@ -312,7 +309,7 @@ html, body, .map, .map-wrapper, #map-container {
 }
 
 .map-control-panel-box .subtitle, .search-results-total {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: ghostwhite;
     text-align: left;
     border: 1px solid grey;
 }
@@ -325,6 +322,7 @@ html, body, .map, .map-wrapper, #map-container {
     text-align: left;
     max-height: 300px;
     overflow-y: scroll;
+    padding-top: 5px;
 }
 
 .map-control-panel-box .close-button, .close-panel {
@@ -521,14 +519,13 @@ html, body, .map, .map-wrapper, #map-container {
 }
 
 .layer-switcher .panel {
-    background-color: white;
     border: none !important;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     padding: 9px !important;
     position: absolute;
     width: 250px;
     margin-left: 55px !important;
-    background-color: rgba(204, 204, 204, 0.4) !important;
+    background-color: white !important;
     border-radius: 0 !important;
 }
 
@@ -605,7 +602,7 @@ div:hover::-webkit-scrollbar {
     font-size: 9pt;
     padding-bottom: 5px;
     padding-top: 5px;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(255, 255, 255, 1);
     padding-left: 5px;
 }
 
