--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -67,6 +67,13 @@
                         <li><a class="nav-link js-scroll-trigger" id="navbar-profile" href="/profile/">PROFILE</a></li>
                          <li><a class="nav-link js-scroll-trigger" id="navbar-contributions" href="/under-development/">CONTRIBUTIONS</a></li>
                          <li><a class="nav-link js-scroll-trigger" id="navbar-upload" href="/upload/">UPLOAD FILES</a></li>
+                         {% for group in user.groups.all %}
+                             {% for category in group.groupprofile.categories.all %}
+                                 {% if category.name == 'validator' %}
+                                    <li><a class="nav-link js-scroll-trigger" id="navbar-upload" href="/nonvalidated-list/">VALIDATE RECORDS</a></li>
+                                {% endif %}
+                             {% endfor %}
+                         {% endfor %}
                         <li><a class="nav-link js-scroll-trigger" href="/accounts/logout/"><i class="fa fa-sign-out"></i> LOGOUT</a></li>
                      {% else %}
                         <li><a class="nav-link js-scroll-trigger" href="/accounts/login/"><i class="fa fa-sign-in"></i> LOGIN</a></li>
