--- a/bims/templates/non_validated_list.html
+++ b/bims/templates/non_validated_list.html
@@ -14,6 +14,7 @@
 {% endblock %}
 
 {% block body_content %}
+<div style="min-height: 100%; height: auto;">
     <div class="container" style="text-align: center; margin-top: 25px; margin-bottom: 30px">
         <h1 class="title-heading">NONVALIDATED BIODIVERSITY RECORDS</h1>
     </div>
@@ -74,6 +75,24 @@
             </span>
         </div>
     {% endif %}
+    </div>
+
+    <section id="about">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-10 pull-left kartoza-icon">
+                <a href="http://kartoza.com/en/">
+                    <img src="{% static '/img/kartoza-logo-only.png' %}" style="width: 55px">
+                </a>
+            </div>
+            <div class="col-lg-2 pull-right about-links">
+                <p><a>About</a></p>
+                <p><a href="/contact/" style="text-decoration: none; color: white">Contact</a></p>
+                <p><a>Others</a></p>
+            </div>
+        </div>
+    </div>
+    </section>
 
     <script>
     function validateObject(pk) {
