add geojson as format of export data

--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -271,7 +271,7 @@
             <div class="row content">
                 <ul style="width:100%">
                     <li data-format="csv">csv</li>
-                    <li data-format="kml">kml</li>
+                    <li data-format="geojson">geojson</li>
                 </ul>
             </div>
         </div>
