--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -16,6 +16,8 @@
     <link href="{% static "js/libs/noUiSlider.11.1.0/nouislider.css" %}" rel="stylesheet">
 
     <script type="text/javascript">
+        const max_year_filter = '{{ date_filter.max }}';
+        const min_year_filter = '{{ date_filter.min }}';
         const bingMapKey = '{{ bing_map_key }}';
         const mapTilerKey = '{{ map_tiler_key }}';
         const staticURL = "{% static "" %}";
