--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -79,6 +79,7 @@
                                 {% endif %}
                              {% endfor %}
                          {% endfor %}
+                            <li><a class="nav-link js-scroll-trigger" href="/nonvalidated-user-list/">UPDATE RECORDS</a></li>
                              <li><a class="nav-link js-scroll-trigger" href="/accounts/logout/"><i class="fa fa-sign-out"></i> LOGOUT</a></li>
                      {% else %}
                         <li><a class="nav-link js-scroll-trigger" href="/accounts/login/"><i class="fa fa-sign-in"></i> LOGIN</a></li>
