--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -130,7 +130,9 @@
 
         if(uploadUrl !== 'None'){
             var navbarUpload = document.getElementById("navbar-upload");
-            navbarUpload.href = uploadUrl;
+            if(navbarUpload) {
+                navbarUpload.href = uploadUrl;
+            }
         }
 
         if(extResourceUrl !== 'None'){
@@ -155,7 +157,9 @@
 
         if(profileUrl !== 'None'){
             var navbarProfile = document.getElementById("navbar-profile");
-            navbarProfile.href = profileUrl;
+            if(navbarProfile) {
+                navbarProfile.href = profileUrl;
+            }
         }
 
         if(contributionsUrl !== 'None'){
