--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -14,6 +14,7 @@
     <link href="{% static "js/libs/ol-layerswitcher/ol3-layerswitcher.css" %}" rel="stylesheet">
     <link href="{% static "js/libs/openlayers-4.6.4/ol.css" %}" rel="stylesheet">
     <link href="{% static "js/libs/noUiSlider.11.1.0/nouislider.css" %}" rel="stylesheet">
+    <link href="{% static "js/libs/jquery-ui-1.12.1/jquery-ui.min.css" %}" rel="stylesheet">
 
     <script type="text/javascript">
         const max_year_filter = '{{ date_filter.max }}';
@@ -26,6 +27,9 @@
         const centerPointMap = '{{ center_point_map }}';
         const listCategoryAPIUrl = '{% url "list-date-category" %}';
         const listNonBiodiversityLayerAPIUrl = '{% url "list-non-biodiversity-layer" %}';
+        const uploadDataUrl = '{% url "upload-collection" %}';
+        const collectionCategory = "{{ collection_category|safe }}";
+        const csrfmiddlewaretoken = "{{ csrf_token }}";
     </script>
 {% endblock %}
 
@@ -282,42 +286,51 @@
                     </div>
                     <div class="modal-body">
                         <form class="form">
-                            <label for="ud_species_name" class="sr-only">
-                                Species Name
+                            <div class="alert alert-danger" role="alert">
+                            </div>
+                            <div class="alert alert-success" role="alert">
+                            </div>
+                            <label for="ud_species_name" class="upload-input-label">
+                                Species Name *
                             </label>
                             <input type="text"
-                                   class="form-control mb-2 mr-sm-2"
-                                   id="ud_species_name" placeholder="Species Name">
-                            <label for="ud_location_site" class="sr-only">
-                                Location Site Name
+                                   class="form-control mb-2 mr-sm-2 ud-item ud-item-required"
+                                   id="ud_species_name" placeholder="" name="Species Name">
+                            <label for="ud_location_site" class="upload-input-label">
+                                Location Site Name *
                             </label>
                             <input type="text"
-                                   class="form-control mb-2 mr-sm-2"
-                                   id="ud_location_site" placeholder="Location Site Name">
-                            <label for="ud_collection_date" class="sr-only">
-                                Collection Date
-                            </label>
-                            <input type="date"
-                                   class="form-control mb-2 mr-sm-2"
-                                   id="ud_collection_date" placeholder="Collection Date">
-                            <label for="ud_category" class="sr-only">
-                                Category
+                                   class="form-control mb-2 mr-sm-2 ud-item ud-item-required"
+                                   id="ud_location_site" name="Location Site" placeholder="">
+                            <label for="ud_collection_date" class="upload-input-label">
+                                Collection Date *
                             </label>
                             <input type="text"
-                                   class="form-control mb-2 mr-sm-2"
-                                   id="ud_category" placeholder="Category">
-                            <label for="ud_collector" class="sr-only">
-                                Collector
+                                   class="form-control mb-2 mr-sm-2 ud-item ud-item-required"
+                                   id="ud_collection_date" name="Collection Date" placeholder="">
+                            <label for="ud_category" class="upload-input-label">
+                                Category *
+                            </label>
+                            <select id="ud_category" name="Category" class="form-control mb-2 mr-sm-2 ud-item-required ud-item">
+                                <option value="">-</option>
+                                {% for category in collection_category %}
+                                    <option value="{{ category.0 }}">{{ category.1 }}</option>
+                                {% endfor %}
+                            </select>
+                            <label for="ud_collector" class="upload-input-label">
+                                Collector *
                             </label>
                             <input type="text"
-                                   class="form-control mb-2 mr-sm-2"
-                                   id="ud_collector" placeholder="Collector">
-                            <label for="ud_notes" class="sr-only">
+                                   class="form-control mb-2 mr-sm-2 ud-item-required ud-item"
+                                   id="ud_collector" placeholder="" name="Collector">
+                            <label for="ud_notes" class="upload-input-label">
                                 Notes
                             </label>
-                            <input type="text"
-                                   class="form-control mb-2 mr-sm-2"
-                                   id="ud_notes" placeholder="Notes">
+                            <textarea class="form-control ud-item"
+                                   id="ud_notes" placeholder=""></textarea>
+                            <p class="required-text ">* = Required </p>
+
+                            <button type="button" class="btn btn-info upload-data-button">Upload</button>
                         </form>
                     </div>
                 </div>
