--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -339,7 +339,7 @@
                     <td><%= collection_date %></td>
                 </tr>
                 <tr>
-                    <td>Collector</td>
+                    <td>Collector or observer</td>
                     <td><%= collector %></td>
                 </tr>
                 <tr>
