--- a/bims/templates/non_validated_list.html
+++ b/bims/templates/non_validated_list.html
@@ -97,7 +97,7 @@
         <div class="row">
             <div class="col-lg-10 pull-left kartoza-icon">
                 <a href="http://kartoza.com/en/">
-                    <img src="{% static '/img/kartoza-logo-only.png' %}" style="width: 55px">
+                    <img src="{% static 'img/kartoza-logo-only.png' %}" style="width: 55px">
                 </a>
             </div>
             <div class="col-lg-2 pull-right about-links">
