change collector's verbose name to collector or observer (#174)

--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -340,7 +340,7 @@
                     <td><%= collection_date %></td>
                 </tr>
                 <tr>
-                    <td>Collector</td>
+                    <td>Collector or observer</td>
                     <td><%= collector %></td>
                 </tr>
                 <tr>
