--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -276,7 +276,7 @@
 
     <script type="text/html" id="upload-data-modal">
         <div class="modal" tabindex="-1" role="dialog">
-            <div class="modal-dialog" role="document">
+            <div class="modal-dialog modal-upload-data" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title">Upload Data</h5>
