--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -40,6 +40,7 @@
     <script type='text/html' id='map-template'>
         <div id="map" class="map"></div>
         <div id="loading-warning"><span>LOADING....</span></div>
+        <div id="footer-message"><span>Additional Info</span></div>
         <div id="fetching-error">
             <span class="try-again">Error when fetching data, please try again.
                 <a class="try-again-button">refresh</a>.
