Add Records Collection Downloader (#163)
* add csv downloader

* fix entry

* fix test

* add geojson as format of export data

* update colum of export file

--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -265,6 +265,21 @@
         </div>
     </script>
 
+    <script type="text/html" id="download-control-panel">
+        <div class="download-control sub-control-panel">
+            <i class="fa fa-download" aria-hidden="true"></i>
+        </div>
+
+        <div class="download-format-selector-container map-control-panel-box">
+            <div class="row content">
+                <ul style="width:100%">
+                    <li data-format="csv">csv</li>
+                    <li data-format="geojson">geojson</li>
+                </ul>
+            </div>
+        </div>
+    </script>
+
     <script type="text/template" id="search-result-record-template">
         <div class="result-search" data-search-result-id="">
             <p class="group-title"><%= common_name %></p>
