--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -112,11 +112,11 @@ html, body, .map, .map-wrapper, #map-container {
     cursor: pointer;
 }
 
-.map-control-panel {
+.map-control-panel, .download-control-panel {
     background-color: white;
     position: absolute;
     left: 0;
-    top: 165px;
+    top: 162px;
     transform: translateY(-50%);
     padding-left: 6px;
     padding-right: 6px;
@@ -128,6 +128,17 @@ html, body, .map, .map-wrapper, #map-container {
     padding-top: 0;
     border-top: none;
     width: 54px;
+}
+
+.download-control-panel {
+    top: 301px;
+}
+
+.download-control-panel .download-format-selector-container {
+    margin-left: 49px;
+    margin-top: 0;
+    display: none;
+    width: auto;
 }
 
 .zoom-control {
@@ -165,7 +176,6 @@ html, body, .map, .map-wrapper, #map-container {
 
 .control-panel-selected {
     background-color: #1b900d;
-    padding-right: 0;
     color: white !important;
 }
 
@@ -238,13 +248,24 @@ html, body, .map, .map-wrapper, #map-container {
     padding-bottom: 0 !important;
 }
 
-#layers-selector {
+.download-format-selector-container {
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.download-format-selector-container li {
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 18px;
+}
+
+.map-control-panel-box ul {
     list-style-type: none;
     padding: 5px;
     margin-bottom: 0;
 }
 
-#layers-selector li {
+.map-control-panel-box li {
     text-align: left;
     background: none;
     color: black;
@@ -256,7 +277,7 @@ html, body, .map, .map-wrapper, #map-container {
     cursor: pointer;
 }
 
-#layers-selector li:hover {
+.map-control-panel-box li:hover {
     background-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -298,6 +319,7 @@ html, body, .map, .map-wrapper, #map-container {
     border-top: 1px solid darkgray;
     margin-top: 3px;
 }
+
 .map-control-panel-box .title {
     font-size: 16pt;
     line-height: 20px;
@@ -497,7 +519,7 @@ html, body, .map, .map-wrapper, #map-container {
 
 .layer-switcher {
     position: absolute;
-    top: 236px !important;
+    top: 233px !important;
     left: 0;
     right: auto !important;
     text-align: left;
