add statistics to bims app

--- a/bims/templates/tracking/dashboard.html
+++ b/bims/templates/tracking/dashboard.html
@@ -51,21 +51,12 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <div class="header text-center"><h2>Visualised
-                    statistics</h2></div>
-
-                <canvas id="myChart" width="500" height="400"></canvas>
-
-                <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
-                <script type="text/javascript" src="{% static 'js/Chart.min.js' %}"></script>
-                <script type="text/javascript">
-                    {#$.get('{% url "line_chart_json" %}', function(data) {#}
-                        var ctx = $("#myChart").get(0).getContext("2d");
-                        new Chart(ctx, {
-                            type: 'line', data: data
-                        });
-                    });
-                </script>
+                <div class="card-header"><h2 style="color: darkgreen;">Database Statistics</h2></div>
+                <nav aria-label="breadcrumb">
+                  <div class="breadcrumb">
+                   <h3>Taxon records:
+                       <span style="padding-right: 2px;"><b>{{ taxon_count }}</b></span></h3></div>
+                </nav>
             </div>
         </div>
         </div>
