Hide upload button if is not authenticated

--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -130,6 +130,10 @@ html, body, .map, .map-wrapper, #map-container {
     width: 54px;
 }
 
+.no-upload {
+    top: 160px;
+}
+
 .download-control-panel {
     top: 349px;
 }
