--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -43,6 +43,12 @@ body {
     font-weight: bold;
 }
 
+.panel-icons {
+    padding-top: 70px;
+    position: absolute;
+    height: 100px;
+}
+
 .right-panel-icon {
     width: 70px;
 }
@@ -110,6 +116,12 @@ html, body, .map, .map-wrapper, #map-container {
 
 .close-panel:hover {
     cursor: pointer;
+}
+
+.side-panel-info {
+    height: 70px;
+    position: absolute;
+    width: 100%
 }
 
 .map-control-panel, .download-control-panel {
@@ -791,8 +803,13 @@ div:hover::-webkit-scrollbar {
 }
 
 #geocontext-information-container {
-    padding: 10px;
+    top: 0;
     display: none;
+    position: absolute;
+    height: 100%;
+    overflow-y: scroll;
+    margin-top: 300px;
+    padding-bottom: 350px;
 }
 
 #geocontext-information-container table {
@@ -809,7 +826,6 @@ div:hover::-webkit-scrollbar {
     width: 100%;
     height: 50px;
     padding: 10px;
-    border: 1px solid gray;
 }
 
 #map-legend-wrapper {
