--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -87,8 +87,8 @@
             </div>
             <div id="geocontext-information-container" class="row side-panel">
                 <img src="{% static "img/small-loading.svg" %}" alt="Loading view">
-                <table class="content">
-                </table>
+                <div class="content">
+                </div>
             </div>
         </div>
     </script>
