add color to heading

--- a/bims/templates/tracking/snippets/stats.html
+++ b/bims/templates/tracking/snippets/stats.html
@@ -23,6 +23,14 @@
 {% endblock %}
 
 {% block body_content %}
+    <style>
+        h2 {
+            color: darkgreen;
+        }
+    th {
+        color: slategrey;
+    }
+    </style>
 
 <h2>Visitors</h2>
 {% if visitor_stats.total %}
