Retrieve location context document from bims cache first.

--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -24,6 +24,7 @@
         const staticURL = "{% static "" %}";
         const geocontextUrl = '{{ geocontext_url }}';
         const geocontextCollectionKey = '{{ geocontext_collection_key }}';
+        const locationSiteDetailURL = '{% url "location-site-detail" 123456789 %}';
         const listCollectorAPIUrl = '{% url "list-collector" %}';
         const centerPointMap = '{{ center_point_map }}';
         const listCategoryAPIUrl = '{% url "list-date-category" %}';
