--- a/bims/templates/account/login.html
+++ b/bims/templates/account/login.html
@@ -35,6 +35,14 @@
             <div class="container">
 
                 <div class="custom-form-container">
+                    {% if messages %}
+                        <ul class="errorlist">
+                            {% for message in messages %}
+                                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+
                     <h1>{% trans "LOG IN" %}</h1>
 
                     {% get_providers as socialaccount_providers %}
