--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -17,6 +17,15 @@
     <link href="{% static "css/navbar.css" %}" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Alegreya:400,400i,500,500i,700,700i|Roboto+Condensed:100,100i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
 
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{ GOOGLE_ANALYTIC_KEY }}"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', '{{ GOOGLE_ANALYTIC_KEY }}');
+    </script>
+
     {% block head %} {% endblock %}
 
 </head>
