--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -370,6 +370,12 @@
          </div>
      </script>
 
+    <script type="text/html" id="geonode-layer-control-panel">
+         <div class="geonode-layer-control sub-control-panel">
+             <i class="fa fa-plus-square" aria-hidden="true"></i>
+         </div>
+     </script>
+
     <script type="text/template" id="search-result-record-template">
         <div class="result-search" data-search-result-id="">
             <p class="group-title"><%= common_name %></p>
