--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -374,6 +374,26 @@
          <div class="geonode-layer-control sub-control-panel">
              <i class="fa fa-plus-square" aria-hidden="true"></i>
          </div>
+
+         <div class="geonode-layer-search-box map-control-panel-box">
+            <div class="row">
+                <div class="col-lg-12" style="padding-right: 0">
+                    <span class="title">
+                        SEARCH LAYER
+                    </span>
+                    <div class="close-button map-search-close pull-right">
+                        X
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="search-box">
+                    <div class="container-1">
+                        <input type="search" id="search" placeholder="Search..."><span class="search-arrow"><i class="fa fa-angle-right"></i></span>
+                    </div>
+                </div>
+            </div>
+        </div>
      </script>
 
     <script type="text/template" id="search-result-record-template">
